# margo-workload-management-api-client-rs

./: API_SPEC_VERSION  Cargo.toml  GENERATE.md  README.md  generate.sh  workload-management-api-1.0.0.yaml
.github/workflows/: update-api-client.yml
.openapi-generator/: FILES
docs/: ApiV1OnboardingCertificateGet200Response.md  ApiV1OnboardingPost201Response.md  ApiV1OnboardingPost400Response.md  ApiV1OnboardingPost403Response.md  ApiV1OnboardingPostRequest.md  AppDeploymentManifest.md  AppDeploymentMetadata.md  AppDeploymentParams.md  AppDeploymentProfile.md  AppDeploymentProfileComponentsInner.md  AppDeploymentSpec.md  AppParameterTarget.md  AppParameterValue.md  ComponentStatus.md  ComponentStatusError.md  ComposeApplicationDeploymentProfileComponent.md  ComposeApplicationDeploymentProfileComponentProperties.md  DefaultApi.md  DeploymentBundleRef.md  DeploymentManifestRef.md  DeploymentStatusManifest.md  DeploymentStatusManifestStatus.md  DeviceCapabilitiesManifest.md  DeviceCapabilitiesManifestProperties.md  DeviceCapabilitiesManifestPropertiesResources.md  DeviceCapabilitiesManifestPropertiesResourcesCpu.md  DeviceCommunicationInterface.md  DevicePeripheral.md  HelmApplicationDeploymentProfileComponent.md  HelmApplicationDeploymentProfileComponentProperties.md  UnsignedAppStateManifest.md
openapi_generator_templates/: Cargo.mustache
openapi_generator_templates/reqwest/: api.mustache  api_mod.mustache
patches/: 0-generic-json-value.patch  1-accept-any-encoding.patch
src/apis/: configuration.rs  default_api.rs  mod.rs
src/models/: app_deployment_params.rs  (+30 more)
